# PyQt

./: .gitignore  README.md  pyproject.toml
examples/: __init__.py  minimal_PyQt.py
src/PyQt/: Qt.py  __init__.py  lib.py  main.py
src/PyQt/QtLib/: PyQt.py
src/PyQt/browse/: 5.py  6.py  __init__.py
tests/: __init__.py  test_Qt.py
