[project]
name = "PyQt"
version = "0.2.0"
authors = [
  { name="Hoefkens Jeroen", email="hoefkens.j@gmail.com" },
]
description = "Unified Versionless Python PyQt Module."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hoefkensj/PyQt"
"Bug Tracker" = "https://github.com/hoefkensj/PyQt/issues"

[tool.poetry]
name = "pyqt"
version = "0.2.0"
description = "Unified Versionless Python PyQt Module."
authors = ["hoefkensj <hoefkens.j@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
