[project]
name = "PyQt"
version = "0.3.1"
authors = [ { name="Hoefkens Jeroen", email="hoefkens.j@gmail.com" },]
description = "Unified Versionless Python PyQt Module. With autocomplete support , uses 6 then 5 then ..."
readme = "README.md"
requires-python = ">=3.6"
#license = ['LICENSE']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hoefkensj/PyQt"
"Bug Tracker" = "https://github.com/hoefkensj/PyQt/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
